--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,10 +2,16 @@
   "name": "Pug",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "dev/views/index.pug",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"compiler-pug\":{\"enabled\":true,\"pretty\":false}}"
+    }
+  ],
   "fileTree": {
     "expandedDirs": [
-      "dev/views"
+      "dev/views",
+      "dev"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
